# AeroNyx

./: Cargo.toml
crates/aeronyx-blind-issuer/: Cargo.toml
crates/aeronyx-blind-issuer/src/: api.rs  config.rs  lib.rs  main.rs  signer.rs
crates/aeronyx-common/: Cargo.toml
crates/aeronyx-common/src/: error.rs  lib.rs  time.rs  types.rs
crates/aeronyx-core/: Cargo.toml
crates/aeronyx-core/src/: error.rs  lib.rs
crates/aeronyx-core/src/crypto/: handshake.rs  kdf.rs  keys.rs  mod.rs  transport.rs
crates/aeronyx-core/src/ledger/: block.rs  fact.rs  merkle.rs  mod.rs  record.rs
crates/aeronyx-core/src/protocol/: auth.rs  blind_vault.rs  chat.rs  codec.rs  discovery.rs  memchain.rs  messages.rs  mod.rs  onion.rs  version.rs
crates/aeronyx-server/: Cargo.toml
crates/aeronyx-server/src/: config.rs  config_blind_vault.rs  config_chat_relay.rs  config_infra.rs  config_memchain.rs  config_saas.rs  config_supernode.rs  error.rs  lib.rs  main.rs  server.rs  voucher_verifier.rs
crates/aeronyx-server/src/api/: admin_handlers.rs  auth.rs  blind_vault.rs  chat_handlers.rs  chat_peer.rs  directory_chain_peer.rs  directory_replica_status.rs  directory_replica_sync.rs  discovery.rs  local.rs  log_handler.rs  memchain_peer.rs  mod.rs  mpi.rs  mpi_graph_handlers.rs  mpi_handlers.rs  recall_handler.rs  supernode_handlers.rs  voice.rs  vpn_health.rs
crates/aeronyx-server/src/handlers/: mod.rs  packet.rs
crates/aeronyx-server/src/ledger/: block.rs
crates/aeronyx-server/src/management/: client.rs  command_handler.rs  config.rs  integrity.rs  mod.rs  models.rs  reporter.rs  ws_client.rs
crates/aeronyx-server/src/miner/: mod.rs  reflection.rs  scheduler.rs
crates/aeronyx-server/src/protocol/: auth.rs  memchain.rs
crates/aeronyx-server/src/services/: agent_manager.rs  blind_vault.rs  chat_relay.rs  deny_list.rs  directory_chain.rs  directory_replica.rs  dns_proxy.rs  handshake.rs  ip_pool.rs  mod.rs  node_policy.rs  onion_keys.rs  peer_store.rs  routing.rs  session.rs  traffic_tracker.rs  wallet_routes.rs
crates/aeronyx-server/src/services/agent/: env_config.rs  gateway.rs  installer.rs  mod.rs  preflight.rs  process_stats.rs
crates/aeronyx-server/src/services/memchain/: aof.rs  embed.rs  graph.rs  llm_anthropic.rs  llm_openai.rs  llm_provider.rs  llm_router.rs  mempool.rs  mod.rs  mvf.rs  ner.rs  prompts.rs  quantize.rs  query_analyzer.rs  reranker.rs  storage.rs  storage_crypto.rs  storage_fts.rs  storage_graph.rs  storage_miner.rs  storage_ops.rs  storage_pool.rs  storage_supernode.rs  system_db.rs  task_worker.rs  vector.rs  vector_pool.rs  volume_router.rs
crates/aeronyx-transport/: Cargo.toml
crates/aeronyx-transport/src/: error.rs  lib.rs  traits.rs  udp.rs
crates/aeronyx-transport/src/tun/: linux.rs  mock.rs  mod.rs
deploy/blind-issuer/: README.md  aeronyx-blind-issuer.service  blind-issuer.example.toml
deploy/node/: README.md  aeronyx-node.sh  aeronyx-server.service  healthcheck.sh  install.sh  server.example.toml  uninstall.sh  upgrade.sh
docs/: memchain-blind-cognition-design.md  memchain-node-blind-refactor.md  node-discovery-and-encrypted-relay-plan.md  rust-vpn-transport-fallback-dev.md  vpn-command-control-plane.md  vpn-session-virtual-ip.md
scripts/: download_models.sh  init.sh  setup_vpn_dns.sh
scripts/systemd/: aeronyx-server.service
