# ============================================
# File: Cargo.toml (Workspace Root) - Production Version
# ============================================
# Modification Notes: Downgraded cryptography libraries to match client
# 
# Issue: Client is constrained by solana-sdk, requiring older versions:
#   - ed25519-dalek 1.0 (not 2.x)
#   - x25519-dalek 1.1 (not 2.x)  
#   - chacha20poly1305 0.9 (not 0.10)
#   - rand 0.7 (not 0.8)
#   - zeroize 1.3 (not 1.8)
#
# Solution: Server downgraded to match client compatibility
# ============================================

[workspace]
resolver = "2"
members = [
    "crates/aeronyx-core",
    "crates/aeronyx-transport",
    "crates/aeronyx-server",
    "crates/aeronyx-common",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aeronyx/aeronyx-server"
authors = ["AeroNyx Contributors"]
keywords = ["privacy", "network", "encryption", "tunnel"]
categories = ["network-programming", "cryptography"]

[workspace.dependencies]
# ============================================
# Async Runtime & Utilities
# ============================================
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
async-trait = "0.1"
futures = "0.3"

# ============================================
# Cryptography - Downgraded to match client (solana-sdk constraints)
# ============================================
# ⚠️ IMPORTANT: These versions MUST match the client exactly!
ed25519-dalek = "1.0"           # Downgraded from 2.1 to 1.0
x25519-dalek = "1.1"            # Downgraded from 2.0 to 1.1
chacha20poly1305 = "0.9"        # Downgraded from 0.10 to 0.9
hkdf = "0.12"
sha2 = "0.10"
rand = "0.7"                    # Downgraded from 0.8 to 0.7
rand_core = "0.5"               # Downgraded from 0.6 to 0.5
zeroize = { version = "1.3", features = ["zeroize_derive"] }  # Downgraded from 1.8 to 1.3

# ============================================
# Serialization & Configuration
# ============================================
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
base64 = "0.21"                 # Downgraded from 0.22 to 0.21
bytes = "1.7"
hex = "0.4"                     # Added for debug logging

# ============================================
# Error Handling
# ============================================
thiserror = "1.0"
anyhow = "1.0"

# ============================================
# Logging & Observability
# ============================================
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ============================================
# Networking
# ============================================
socket2 = { version = "0.5", features = ["all"] }

# ============================================
# System & Platform
# ============================================
nix = { version = "0.29", features = ["net", "ioctl", "fs"] }
libc = "0.2"

# ============================================
# CLI
# ============================================
clap = { version = "4.5", features = ["derive", "env"] }

# ============================================
# Utilities
# ============================================
parking_lot = "0.12"
dashmap = "6.0"
arc-swap = "1.7"
pin-project-lite = "0.2"

# ============================================
# Testing
# ============================================
criterion = "0.5"
proptest = "1.5"
test-case = "3.3"

# ============================================
# Internal Crates
# ============================================
aeronyx-core = { path = "crates/aeronyx-core" }
aeronyx-transport = { path = "crates/aeronyx-transport" }
aeronyx-server = { path = "crates/aeronyx-server" }
aeronyx-common = { path = "crates/aeronyx-common" }

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"

# ============================================
# Build Profiles
# ============================================
[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.bench]
debug = true

[profile.dev]
opt-level = 0
debug = true

[profile.dev-optimized]
inherits = "dev"
opt-level = 2
