# ============================================
# File: Cargo.toml (Workspace Root)
# ============================================
# AeroNyx Privacy Network - Workspace Configuration
# ============================================
# Modification Reason: Downgrade crypto library versions to match client
#
# CRITICAL VERSION ALIGNMENT:
# The client (Flutter/iOS) is constrained by solana-sdk dependencies:
#   - ed25519-dalek 1.0 (NOT 2.x)
#   - x25519-dalek 1.1 (NOT 2.x)
#   - chacha20poly1305 0.9 (NOT 0.10)
#   - rand 0.7 (NOT 0.8)
#   - zeroize 1.3 (NOT 1.8)
#
# Solution: Server must use the same versions to ensure crypto compatibility
#
# Architecture Overview:
# ┌─────────────────────────────────────────────────────────────┐
# │  aeronyx-server    - Main server binary & orchestration     │
# │  aeronyx-core      - Protocol definitions & cryptography    │
# │  aeronyx-transport - Network I/O & TUN device abstraction   │
# │  aeronyx-common    - Shared utilities & types               │
# └─────────────────────────────────────────────────────────────┘
#
# ⚠️ Important Note for Next Developer:
# - Keep dependency versions synchronized with client
# - All crypto library versions MUST match exactly
# - Use workspace inheritance for common dependencies
# - All crates should use the same async runtime (tokio)
#
# Last Modified: Version alignment fix for client compatibility
# ============================================

[workspace]
resolver = "2"
members = [
    "crates/aeronyx-core",
    "crates/aeronyx-transport",
    "crates/aeronyx-server",
    "crates/aeronyx-common",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aeronyx/aeronyx-server"
authors = ["AeroNyx Contributors"]
keywords = ["privacy", "network", "encryption", "tunnel"]
categories = ["network-programming", "cryptography"]

[workspace.dependencies]
# ============================================
# Async Runtime & Utilities
# ============================================
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
async-trait = "0.1"
futures = "0.3"

# ============================================
# Cryptography (RustCrypto - security audited)
# ============================================
# ⚠️ CRITICAL: These versions MUST match client exactly!
# Client is constrained by solana-sdk which requires older versions.
# DO NOT upgrade these without also upgrading client dependencies.
#
# Version mapping (Server ← must match → Client):
#   ed25519-dalek:      1.0  ←→  1.0  ✓
#   x25519-dalek:       1.1  ←→  1.1  ✓
#   chacha20poly1305:   0.9  ←→  0.9  ✓
#   rand:               0.7  ←→  0.7  ✓
#   zeroize:            1.3  ←→  1.3  ✓
# ============================================
ed25519-dalek = "1.0"
x25519-dalek = "1.1"
chacha20poly1305 = "0.9"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.7"
rand_core = "0.5"
zeroize = { version = "1.3", features = ["zeroize_derive"] }

# ============================================
# Serialization & Configuration
# ============================================
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
base64 = "0.21"
bytes = "1.7"
hex = "0.4"

# ============================================
# Error Handling
# ============================================
thiserror = "1.0"
anyhow = "1.0"

# ============================================
# Logging & Observability
# ============================================
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ============================================
# Networking
# ============================================
socket2 = { version = "0.5", features = ["all"] }

# ============================================
# System & Platform
# ============================================
nix = { version = "0.29", features = ["net", "ioctl", "fs"] }
libc = "0.2"

# ============================================
# CLI
# ============================================
clap = { version = "4.5", features = ["derive", "env"] }

# ============================================
# Utilities
# ============================================
parking_lot = "0.12"
dashmap = "6.0"
arc-swap = "1.7"
pin-project-lite = "0.2"

# ============================================
# Testing
# ============================================
criterion = "0.5"
proptest = "1.5"
test-case = "3.3"

# ============================================
# Internal Crates
# ============================================
aeronyx-core = { path = "crates/aeronyx-core" }
aeronyx-transport = { path = "crates/aeronyx-transport" }
aeronyx-server = { path = "crates/aeronyx-server" }
aeronyx-common = { path = "crates/aeronyx-common" }

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"

# ============================================
# Build Profiles
# ============================================
[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.bench]
debug = true

[profile.dev]
opt-level = 0
debug = true

[profile.dev-optimized]
inherits = "dev"
opt-level = 2
