# ============================================
# File: crates/aeronyx-blind-issuer/Cargo.toml
# ============================================
# [BLIND-ISSUER 2026-07-23 by Codex] This crate is the isolated private-key
# boundary; it must remain independent from storage-node runtime state.
# Creation Reason: Isolate RFC 9474 private-key operations from storage nodes.
# Main Functionality: Loopback-only authenticated blind-signing service,
# aggregate operations health, and secure key/token generation commands.
# Dependencies: aeronyx-core defines the admission scheme and public epoch
# bounds; no dependency on aeronyx-server is permitted.
# Important: Never add storage-node, wallet, account, or client-IP state here.
# Last Modified: v0.4.0-BlindIssuer - Added status endpoint test support.
# ============================================

[package]
name = "aeronyx-blind-issuer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Isolated RFC 9474 blind-signing service for AeroNyx Blind Vault admission"

[dependencies]
aeronyx-core = { workspace = true }
axum = "0.7"
base64 = { workspace = true }
blind-rsa-signatures = "0.17.2"
clap = { workspace = true }
hex = { workspace = true }
libc = "0.2"
nix = { workspace = true, features = ["user"] }
parking_lot = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
subtle = "2.6"
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3.12"
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
