# ============================================
# File: crates/aeronyx-server/Cargo.toml
# ============================================
# AeroNyx Server - Main Server Binary
# ============================================
# Creation Reason: The main server implementation that orchestrates
#                  all components of the AeroNyx privacy network.
#
# Modification Reason: Added `bincode` for MemChain message handling.
# The server needs bincode to deserialise incoming MemChain messages
# (via aeronyx-core) and for AOF persistence. Also moved `tempfile`
# note to dev-deps (already present, just documenting).
#
# Modification Reason (v1.3.0):
# - 🌟 Added `tokio-tungstenite` with `rustls-tls-native-roots` for
#   WebSocket tunnel to CMS (Phase 3: wss:// to CMS + ws:// to local OpenClaw)
# - `futures` was already present (workspace), confirmed needed for
#   Stream/Sink traits used by tokio-tungstenite split()
#
# Main Functionality:
# - Server binary with CLI interface
# - Configuration management
# - Session management and routing
# - Handshake processing
# - Packet forwarding
# - 🌟 MemChain storage engine (MemPool + AofWriter)
# - 🌟 CMS command pipeline + AgentManager (v1.3.0)
# - 🌟 WebSocket tunnel for real-time AI interaction (v1.3.0)
#
# Dependencies:
# - Depends on: aeronyx-core, aeronyx-transport, aeronyx-common
# - External: tokio, clap, tracing
# - 🌟 v1.3.0: tokio-tungstenite (WebSocket client)
#
# Binary:
# - aeronyx-server: Main server executable
#
# ⚠️ Important Note for Next Developer:
# - This is the main entry point for the server
# - Configuration is loaded from TOML files
# - Requires root/CAP_NET_ADMIN for TUN operations
# - MemChain AOF file is created in the working directory
# - 🌟 tokio-tungstenite uses rustls (not native-tls) to match
#   the rest of the project's TLS strategy (reqwest also uses rustls-tls)
# - 🌟 futures crate is needed for SinkExt/StreamExt traits
#   used by tokio-tungstenite's split() WS streams
#
# Last Modified:
# v0.1.0 - Initial server implementation
# v0.2.0 - Added bincode for MemChain integration
# v1.3.0 - 🌟 Added tokio-tungstenite for WebSocket tunnel
# ============================================

[package]
name = "aeronyx-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "AeroNyx privacy network server"
keywords = ["aeronyx", "server", "privacy", "network"]
categories = ["network-programming", "command-line-utilities"]

[[bin]]
name = "aeronyx-server"
path = "src/main.rs"

[dependencies]
# Internal crates
aeronyx-core = { workspace = true }
aeronyx-transport = { workspace = true }
aeronyx-common = { workspace = true }

reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
sha2 = "0.10"
hex = "0.4"

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# CLI
clap = { workspace = true }

# Configuration
toml = { workspace = true }
serde = { workspace = true }
serde_json = { version = "1.0", features = ["preserve_order"] }

# 🌟 Added for MemChain: AOF persistence + message handling
bincode = "1.3"

# 🌟 Added for MemChain Phase 1: Agent HTTP API
axum = "0.7"
tower = "0.5"

# 🌟 v1.3.0: WebSocket client for CMS tunnel + local OpenClaw Gateway
# Uses rustls with ring crypto backend for TLS.
# native-roots loads the system CA store for wss:// certificate validation.
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
rustls = { version = "0.23", features = ["ring"], default-features = false }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
bytes = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
arc-swap = { workspace = true }

# Cryptography (for key management)
rand = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile = "3.12"
tower = { version = "0.5", features = ["util"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }

[lints]
workspace = true

[features]
default = []
# Development mode with relaxed security
dev = []
